[gd_scene load_steps=2 format=3 uid="uid://c8xvhqxqxqxqx"]

[ext_resource type="Script" path="res://scripts/main_game.gd" id="1_0"]

[node name="MainGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = 300.0
columns = 15
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 2

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0

[node name="ScoreLabel" type="Label" parent="UI/TopPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -13.0
offset_right = 50.0
offset_bottom = 13.0
text = "Score: 0"
horizontal_alignment = 1

[node name="StepButton" type="Button" parent="UI/TopPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 50.0
text = "Next Step"

[node name="MachinePanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -200.0

[node name="MachineList" type="VBoxContainer" parent="UI/MachinePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="Label" type="Label" parent="UI/MachinePanel/MachineList"]
layout_mode = 2
text = "Available Machines:"

[node name="ConveyorButton" type="Button" parent="UI/MachinePanel/MachineList"]
layout_mode = 2
text = "Conveyor Belt"

[node name="RiceCookerButton" type="Button" parent="UI/MachinePanel/MachineList"]
layout_mode = 2
text = "Rice Cooker"

[node name="FishCutterButton" type="Button" parent="UI/MachinePanel/MachineList"]
layout_mode = 2
text = "Fish Cutter"

[node name="DishComposerButton" type="Button" parent="UI/MachinePanel/MachineList"]
layout_mode = 2
text = "Dish Composer" 